word-puzzle: added letter-spacing to increase gap between characters; modified click event delegation to prevent executing click handler on unintended parent elements.

--- a/test/pages/games/content/word-puzzle/word-puzzle.css
+++ b/test/pages/games/content/word-puzzle/word-puzzle.css
@@ -1,4 +1,4 @@
-* { box-sizing:border-box; margin:0px; outline:none; overflow:hidden; padding:0px; user-select:none; word-spacing:0.25em; }
+* { box-sizing:border-box; letter-spacing:0.075em; margin:0px; outline:none; overflow:hidden; padding:0px; user-select:none; word-spacing:0.25em; }
 
 body, html { height:100%; width:100%; }
 
